deleted useless js files

--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,13 @@
-*~
-*.sw[mnpcod]
-*.log
-*.tmp
-*.tmp.*
-log.txt
-*.sublime-project
-*.sublime-workspace
 .vscode/
-npm-debug.log*
-
-.idea/
-.ionic/
-.sourcemaps/
-.sass-cache/
-.tmp/
 .versions/
 coverage/
 dist/
 node_modules/
-tmp/
-temp/
 platforms/
 plugins/
-plugins/android.json
-plugins/ios.json
 www/
+run.sh
+.sourcemaps/
+vscodeJGV.code-workspace
+src/*/*/*.js*
+src/assets/midi/npm-debug.log
