--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,10 +5,7 @@
     "allowSyntheticDefaultImports": true,
     "declaration": false,
     "emitDecoratorMetadata": true,
-    "lib": [
-      "dom",
-      "es2015"
-    ],
+    "lib": ["es6", "dom", "es2017"],
     "module": "es2015",
     "moduleResolution": "node",
     "sourceMap": true,
