--- a/package.json
+++ b/package.json
@@ -23,10 +23,11 @@
     "@angular/http": "5.2.11",
     "@angular/platform-browser": "5.2.11",
     "@angular/platform-browser-dynamic": "5.2.11",
-    "@ionic-native/background-mode": "^5.15.1",
+    "@compodoc/compodoc": "^1.1.11",
+    "@ionic-native/background-mode": "^5.16.0",
     "@ionic-native/core": "~4.12.0",
-    "@ionic-native/globalization": "^5.15.1",
-    "@ionic-native/in-app-purchase-2": "^5.15.1",
+    "@ionic-native/globalization": "^5.16.0",
+    "@ionic-native/in-app-purchase-2": "^5.16.0",
     "@ionic-native/native-storage": "^4.19.0",
     "@ionic-native/splash-screen": "~4.12.0",
     "@ionic-native/status-bar": "~4.12.0",
