--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "font-awesome": "^4.7.0",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
+    "lodash": "^4.17.15",
     "ng2-charts": "^1.6.0",
     "rxjs": "5.5.11",
     "sw-toolbox": "3.6.0",
@@ -54,7 +55,7 @@
     "@ionic/cli-plugin-cordova": "1.5.0",
     "@ionic/cli-plugin-ionic-angular": "1.4.1",
     "@ionic/lab": "1.0.9",
-    "cordova-plugin-splashscreen": "^4.0.3",
+    "cordova-plugin-splashscreen": "git+https://github.com/apache/cordova-plugin-splashscreen.git",
     "cordova-plugin-whitelist": "^1.3.1",
     "cordova-uglify": "^0.3.4",
     "ionic-plugin-keyboard": "^2.2.1",
