--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@compodoc/compodoc": "^1.1.11",
     "@ionic-native/background-mode": "^5.16.0",
     "@ionic-native/core": "~4.12.0",
+    "@ionic-native/file": "^5.16.0",
     "@ionic-native/globalization": "^5.16.0",
     "@ionic-native/in-app-purchase-2": "^5.16.0",
     "@ionic-native/native-storage": "^4.19.0",
@@ -35,9 +36,11 @@
     "@ionic/storage": "2.1.3",
     "@ngx-translate/core": "^9.1.1",
     "@ngx-translate/http-loader": "^4.0.0",
+    "@types/node": "^12.12.6",
     "chart.js": "^2.7.2",
     "cordova-android": "^8.1.0",
     "cordova-plugin-device": "^2.0.3",
+    "cordova-plugin-file": "6.0.2",
     "cordova-plugin-inapppurchase": "1.2.0",
     "cordova-plugin-ionic-webview": "^4.1.2",
     "font-awesome": "^4.7.0",
@@ -69,7 +72,8 @@
       "cordova-plugin-whitelist": {},
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
-      "cordova-plugin-ionic-webview": {}
+      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-file": {}
     }
   }
 }
