--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "ionicons": "3.0.0",
     "lodash": "^4.17.15",
     "ng2-charts": "^1.6.0",
+    "paypal-rest-sdk": "^1.8.1",
     "rxjs": "5.5.11",
     "sw-toolbox": "3.6.0",
     "uglify-js": "^3.6.5",
@@ -55,10 +56,11 @@
   },
   "devDependencies": {
     "@ionic/app-scripts": "^3.2.4",
-    "@ionic/cli-plugin-cordova": "1.6.2",
+    "@ionic/cli-plugin-cordova": "^1.4.1",
     "@ionic/cli-plugin-ionic-angular": "1.4.1",
     "@ionic/lab": "1.0.9",
-    "cordova-plugin-splashscreen": "git+https://github.com/apache/cordova-plugin-splashscreen.git",
+    "cordova-plugin-background-mode": "^0.7.3",
+    "cordova-plugin-splashscreen": "github:apache/cordova-plugin-splashscreen",
     "cordova-plugin-whitelist": "^1.3.1",
     "cordova-uglify": "^0.3.4",
     "ionic-plugin-keyboard": "^2.2.1",
@@ -72,8 +74,13 @@
       "cordova-plugin-whitelist": {},
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
-      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-ionic-webview": {
+        "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
+      },
       "cordova-plugin-file": {}
-    }
+    },
+    "platforms": [
+      "android"
+    ]
   }
 }
