--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "types": [],
     "allowJs": true,
     "experimentalDecorators": true,
     "allowSyntheticDefaultImports": true,
