--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "@angular/compiler-cli": "5.2.11",
     "@angular/core": "5.2.11",
     "@angular/forms": "5.2.11",
-    "@angular/http": "5.2.11",
     "@angular/platform-browser": "5.2.11",
     "@angular/platform-browser-dynamic": "5.2.11",
     "@compodoc/compodoc": "^1.1.11",
@@ -28,6 +27,7 @@
     "@ionic-native/core": "~4.12.0",
     "@ionic-native/file": "^5.16.0",
     "@ionic-native/globalization": "^5.16.0",
+    "@ionic-native/in-app-browser": "^4.20.0",
     "@ionic-native/in-app-purchase-2": "^5.16.0",
     "@ionic-native/native-storage": "^4.19.0",
     "@ionic-native/splash-screen": "~4.12.0",
@@ -44,12 +44,14 @@
     "cordova-plugin-inapppurchase": "1.2.0",
     "cordova-plugin-ionic-webview": "^4.1.2",
     "font-awesome": "^4.7.0",
+    "ionic": "3.6.0",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
     "lodash": "^4.17.15",
     "ng2-charts": "^1.6.0",
     "paypal-rest-sdk": "^1.8.1",
-    "rxjs": "5.5.11",
+    "remove": "^0.1.5",
+    "rxjs": "^5.5.11",
     "sw-toolbox": "3.6.0",
     "uglify-js": "^3.6.5",
     "zone.js": "0.8.26"
@@ -80,7 +82,8 @@
       "cordova-plugin-file": {}
     },
     "platforms": [
-      "android"
+      "android",
+      "browser"
     ]
   }
 }
