--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@ionic-native/in-app-browser": "^4.20.0",
     "@ionic-native/in-app-purchase-2": "^5.16.0",
     "@ionic-native/native-storage": "^4.19.0",
+    "@ionic-native/paypal": "^4.20.0",
     "@ionic-native/splash-screen": "~4.12.0",
     "@ionic-native/status-bar": "~4.12.0",
     "@ionic/pro": "2.0.3",
@@ -46,6 +47,7 @@
     "font-awesome": "^4.7.0",
     "ionic": "3.6.0",
     "ionic-angular": "3.9.2",
+    "ionic-native": "^2.9.0",
     "ionicons": "3.0.0",
     "lodash": "^4.17.15",
     "ng2-charts": "^1.6.0",
