branche de gestion des accordages

--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
   },
   "devDependencies": {
     "@ionic/app-scripts": "^3.2.4",
-    "@ionic/cli-plugin-cordova": "^1.4.1",
+    "@ionic/cli-plugin-cordova": "1.6.2",
     "@ionic/cli-plugin-ionic-angular": "1.4.1",
     "@ionic/lab": "1.0.9",
     "cordova-plugin-background-mode": "^0.7.3",
