--- a/package.json
+++ b/package.json
@@ -23,14 +23,13 @@
     "@angular/platform-browser": "5.2.11",
     "@angular/platform-browser-dynamic": "5.2.11",
     "@compodoc/compodoc": "^1.1.11",
-    "@ionic-native/background-mode": "^5.16.0",
+    "@ionic-native/background-mode": "^4.20.0",
     "@ionic-native/core": "~4.12.0",
     "@ionic-native/file": "^5.16.0",
-    "@ionic-native/globalization": "^5.16.0",
+    "@ionic-native/globalization": "^4.20.0",
     "@ionic-native/in-app-browser": "^4.20.0",
     "@ionic-native/in-app-purchase-2": "^5.16.0",
     "@ionic-native/native-storage": "^4.19.0",
-    "@ionic-native/paypal": "^4.20.0",
     "@ionic-native/splash-screen": "~4.12.0",
     "@ionic-native/status-bar": "~4.12.0",
     "@ionic/pro": "2.0.3",
@@ -42,6 +41,7 @@
     "cordova-android": "^8.1.0",
     "cordova-plugin-device": "^2.0.3",
     "cordova-plugin-file": "6.0.2",
+    "cordova-plugin-globalization": "1.11.0",
     "cordova-plugin-inapppurchase": "1.2.0",
     "cordova-plugin-ionic-webview": "^4.1.2",
     "font-awesome": "^4.7.0",
@@ -81,7 +81,8 @@
       "cordova-plugin-ionic-webview": {
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
       },
-      "cordova-plugin-file": {}
+      "cordova-plugin-file": {},
+      "cordova-plugin-globalization": {}
     },
     "platforms": [
       "android",
