--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "ionic-app-scripts serve",
     "clean": "ionic-app-scripts clean",
     "build": "ionic-app-scripts build",
-    "lint": "ionic-app-scripts lint"
+    "lint": "ionic-app-scripts lint",
+    "compodoc": "npx compodoc -p tsconfig.doc.json"
   },
   "config": {
     "ionic_copy": "./config/copy.config.js"
@@ -22,7 +23,6 @@
     "@angular/forms": "5.2.11",
     "@angular/platform-browser": "5.2.11",
     "@angular/platform-browser-dynamic": "5.2.11",
-    "@compodoc/compodoc": "^1.1.11",
     "@ionic-native/background-mode": "^4.20.0",
     "@ionic-native/core": "~4.12.0",
     "@ionic-native/file": "^5.16.0",
@@ -59,6 +59,7 @@
     "zone.js": "0.8.26"
   },
   "devDependencies": {
+    "@compodoc/compodoc": "^1.1.19",
     "@ionic/app-scripts": "^3.2.4",
     "@ionic/cli-plugin-cordova": "^1.6.2",
     "@ionic/cli-plugin-ionic-angular": "1.4.1",
