--- a/ionic.config.json
+++ b/ionic.config.json
@@ -1,8 +1,8 @@
 {
   "name": "",
-  "app_id": "",
   "integrations": {
     "cordova": {}
   },
-  "type": "ionic-angular"
+  "type": "ionic-angular",
+  "app_id": ""
 }
