--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "@ngx-translate/http-loader": "^4.0.0",
         "@types/node": "^12.12.6",
         "chart.js": "^2.7.2",
+        "cordova-android": "9.1.0",
         "cordova-plugin-device": "^2.0.3",
         "cordova-plugin-file": "6.0.2",
         "cordova-plugin-globalization": "1.11.0",
@@ -44,6 +45,7 @@
         "cordova-plugin-ionic-webview": "^4.1.2",
         "cordova-plugin-whitelist": "1.3.1",
         "font-awesome": "^4.7.0",
+        "hash-sum": "^2.0.0",
         "ionic": "^3.9.0",
         "ionic-angular": "3.9.2",
         "ionic-native": "^2.9.0",
@@ -61,7 +63,6 @@
     "devDependencies": {
         "@compodoc/compodoc": "^1.1.19",
         "@ionic/app-scripts": "^3.2.4",
-        "@ionic/cli-plugin-cordova": "^1.6.2",
         "@ionic/cli-plugin-ionic-angular": "1.4.1",
         "@ionic/lab": "1.0.9",
         "cordova-plugin-splashscreen": "github:apache/cordova-plugin-splashscreen",
