--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
         "cordova-plugin-inapppurchase": "1.2.0",
         "cordova-plugin-ionic-webview": "^4.1.2",
         "cordova-plugin-whitelist": "1.3.1",
+        "crypto-js": "^4.1.1",
         "font-awesome": "^4.7.0",
         "hash-sum": "^2.0.0",
         "ionic": "^3.9.0",
