--- a/package.json
+++ b/package.json
@@ -37,13 +37,15 @@
         "@ngx-translate/http-loader": "^4.0.0",
         "@types/node": "^12.12.6",
         "chart.js": "^2.7.2",
-        "cordova-android": "9.1.0",
+        "cordova": "^11.0.0",
+        "cordova-android": "11.0.0",
+        "cordova-plugin-androidx": "3.0.0",
+        "cordova-plugin-androidx-adapter": "1.1.3",
         "cordova-plugin-device": "^2.0.3",
         "cordova-plugin-file": "6.0.2",
         "cordova-plugin-globalization": "1.11.0",
         "cordova-plugin-inapppurchase": "1.2.0",
         "cordova-plugin-ionic-webview": "^4.1.2",
-        "cordova-plugin-whitelist": "1.3.1",
         "font-awesome": "^4.7.0",
         "ionic": "^3.9.0",
         "ionic-angular": "3.9.2",
@@ -56,7 +58,9 @@
         "remove": "^0.1.5",
         "rxjs": "^5.5.11",
         "sw-toolbox": "3.6.0",
+        "to": "^0.2.9",
         "uglify-js": "^3.6.5",
+        "update": "^0.7.4",
         "zone.js": "0.8.26"
     },
     "devDependencies": {
@@ -64,8 +68,8 @@
         "@ionic/app-scripts": "^3.2.4",
         "@ionic/cli-plugin-ionic-angular": "1.4.1",
         "@ionic/lab": "1.0.9",
+        "cordova-plugin-file-transfer": "git+https://github.com/apache/cordova-plugin-file-transfer.git",
         "cordova-plugin-splashscreen": "github:apache/cordova-plugin-splashscreen",
-        "cordova-plugin-whitelist": "^1.3.1",
         "cordova-uglify": "^0.3.4",
         "ionic-plugin-keyboard": "^2.2.1",
         "typescript": "~2.6.2"
@@ -74,14 +78,15 @@
     "cordova": {
         "plugins": {
             "ionic-plugin-keyboard": {},
-            "cordova-plugin-whitelist": {},
             "cordova-plugin-device": {},
             "cordova-plugin-splashscreen": {},
             "cordova-plugin-ionic-webview": {
                 "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
             },
             "cordova-plugin-file": {},
-            "cordova-plugin-globalization": {}
+            "cordova-plugin-globalization": {},
+            "cordova-plugin-androidx": {},
+            "cordova-plugin-androidx-adapter": {}
         },
         "platforms": [
             "android"
