--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
         "cordova-plugin-globalization": "1.11.0",
         "cordova-plugin-inapppurchase": "1.2.0",
         "cordova-plugin-ionic-webview": "^4.1.2",
+        "fast-deep-equal": "^3.1.3",
         "font-awesome": "^4.7.0",
         "ionic": "^3.9.0",
         "ionic-angular": "3.9.2",
