--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
         "ionic-native": "^2.9.0",
         "ionic-plugin-keyboard": "~2.2.1",
         "ionicons": "3.0.0",
+        "json-schema": "^0.4.0",
         "lodash": "^4.17.15",
         "ng2-charts": "^1.6.0",
         "paypal-rest-sdk": "^1.8.1",
